# notion_tg_notes

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config-sample.yaml  config.yaml.sample  docker-compose.yml  pyproject.toml
deployment/: Dockerfile  docker-compose.yml
src/: config.py  logger.py  main.py  scheduler.py
src/api/: __init__.py  api.py  properties.py  structs.py
src/routes/: __init__.py  common.py  date_mapper.py  note_creating.py  note_querying.py
