[tool.poetry]
name = "notion-notes-tg"
version = "0.1.0"
description = "Notion intergration in telegram"
authors = ["mrtstg <mrtstgdev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b7"
aiohttp = "^3.8.4"
pyyaml = "^6.0"
datetime = "^5.0"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
